# fourier-epicycles-cpp

./: .gitignore  .gitmodules  README.md
docs/: Animation.tex  FourierSeries.tex  Implementation.tex  Main.tex  codestyle-cpp.tex  config-colors.tex  config-layout.tex  config-logos.tex  fourier-series.tex  fourier_math.tex
fourier_animation/: CMakeLists.txt  README.md  build.bat  build.sh  generate_video.bat
fourier_animation/include/: animation.hpp  colors.hpp  contour_extractor.hpp  fourier.hpp  video_writer.hpp
fourier_animation/src/: animation.cpp  colors.cpp  contour_extractor.cpp  fourier.cpp  main.cpp  video_writer.cpp
